tuning test execution